# profile.mobile.apps.native.location.myplace

./: AUTHORS  CMakeLists.txt  org.tizen.myplace.efl  org.tizen.myplace.manifest  org.tizen.myplace.xml  project.config
packaging/: org.tizen.myplace.spec
resources/data/xml/: myplace_ChangeableColorInfo.xml  myplace_ChangeableFontInfo.xml
resources/edc/: CMakeLists.txt  detail_view.edc  map_view.edc
resources/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  (+11 more)
src/: CMakeLists.txt  location-test.c  location-test.h  myplace-common.h  myplace-delete.c  myplace-delete.h  myplace-detailinfo.c  myplace-detailinfo.h  myplace-elementary.c  myplace-elementary.h  myplace-mapview.c  myplace-mapview.h  myplace-placelist.c  myplace-placelist.h  myplace.c  myplace.h
