CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(myplace C)
SET(PKG_NAME org.tizen.myplace)

# Version control
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.1")

# Architecture
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
    ADD_DEFINITIONS("-D_SOUND_EQ_ARCH_ARM_")
ENDIF()

SET(COMMON_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(LIBDIR "${PREFIX}/lib")
SET(RESDIR "${PREFIX}/res")
SET(DATADIR "${PREFIX}/data")
SET(IMGDIR "${DATADIR}/images")
SET(LOCALE_DIR "${RESDIR}/locale")
SET(EDJ_DIR "${RESDIR}/edje")

SET(RW_PREFIX ${CMAKE_INSTALL_RW_PREFIX})

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE(FindPkgConfig)

# Check external libraries
INCLUDE(FindPkgConfig)
pkg_check_modules(MYPLACE_EXT_LIBS "REQUIRED" glib-2.0 gthread-2.0 efl-extension ui-gadget-1 capi-network-wifi capi-geofence-manager capi-network-bluetooth capi-appfw-application capi-system-info evas elementary edje capi-location-manager dlog vconf appcore-efl ecore)

SET(EXTRA_CFLAGS "")
FOREACH(flag ${${MYPLACE_EXT_LIBS}_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${COMMON_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS("-DMYPLACE_PKG=\"${PKG_NAME}\"")
ADD_DEFINITIONS("-DRES_DIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DIMG_DIR=\"${IMGDIR}\"")
ADD_DEFINITIONS("-DEDJ_DIR=\"${EDJ_DIR}\"")
ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALE_DIR}\"")

# install application HOME directory
INSTALL(DIRECTORY DESTINATION ${DATADIR})

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/resources/data/xml/ DESTINATION ${RESDIR} FILES_MATCHING PATTERN "*.xml")
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/resources/data/images/ DESTINATION ${IMGDIR} FILES_MATCHING PATTERN "*.*")


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(resources/edc)
ADD_SUBDIRECTORY(resources/po)
